# adage

./: .bumpversion.cfg  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  ChangeLog  Changelog  LICENSE  MANIFEST.in  README  README.md  example.py  pyproject.toml  pytest.ini  run.py  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-package.yml
adage/: __init__.py  adageobject.py  backends.py  controllerutils.py  dagstate.py  dagutils.py  decorators.py  graph.py  node.py  nodestate.py  pollingexec.py  serialize.py  trackers.py  visualize.py  wflowcontroller.py
dagger/: __init__.py  dag.py
docs/: Makefile  coderef.rst  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: callback.py  celeryapp.py  custombackend.py  custombackendprocessing.py  custombackendstepper.py  dynamicrules.py  genericexample.py  genericexample_ipython.py  ifelse.py  latemerge.py  physicsexample.py  physicstasks.py  simple.py
src/adage/: backends.py  dagstate.py  decorators.py  node.py  nodestate.py  serialize.py
tests/: test_main.py
