[metadata]
name = adage
version = 0.10.2
description = Running dynamic DAG workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yadage/adage
author = Lukas Heinrich
author_email = lukas.heinrich@cern.ch
license = MIT
license_file = LICENSE
keywords = physics yadage
project_urls =
    Documentation = https://github.com/yadage/adage
    Source Code = https://github.com/yadage/adage
    Issue Tracker = https://github.com/yadage/adage/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    networkx>=2.4

[options.packages.find]
where = src
